# rua

./: Cargo.toml  README.md  area.ipynb  draw.py  requirements.txt  run.sh
.github/workflows/: pylint.yml
data/: area_history.csv
src/: main.rs
